--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
+    "@angular/localize": "~11.2.1",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "@angular/service-worker": "~11.2.1",
-    "bootstrap": "^5.0.0-beta2",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "bootstrap": "4.5.0",
     "bootstrap-icons": "^1.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
