--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
+    "http-server": "http-server -p 8080 -c-1 dist/tomato-timer",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,7 +24,6 @@
     "@angular/service-worker": "~11.2.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "4.5.0",
-    "bootstrap-icons": "^1.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
