--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
+    "config": "ts-node src/assets/scripts/setEnv.ts",
+    "start": "npm run config -- --environment=dev && ng serve",
+    "build": "npm run config -- --environment=prod && ng build --prod",
     "http-server": "http-server -p 8080 -c-1 dist/tomato-timer",
     "build-locale": "npm run build && npm run http-server",
     "test": "ng test",
@@ -24,6 +25,7 @@
     "@angular/router": "~11.2.1",
     "@angular/service-worker": "~11.2.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "aws-rum-web": "^1.6.0",
     "bootstrap": "4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -36,6 +38,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "dotenv": "^16.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -46,6 +49,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "yargs": "^17.5.1"
   }
 }
