--- a/package.json
+++ b/package.json
@@ -14,42 +14,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.1",
-    "@angular/common": "~11.2.1",
-    "@angular/compiler": "~11.2.1",
-    "@angular/core": "~11.2.1",
-    "@angular/forms": "~11.2.1",
-    "@angular/localize": "~11.2.1",
-    "@angular/platform-browser": "~11.2.1",
-    "@angular/platform-browser-dynamic": "~11.2.1",
-    "@angular/router": "~11.2.1",
-    "@angular/service-worker": "~11.2.1",
-    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-    "aws-rum-web": "^1.6.0",
-    "bootstrap": "4.5.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "@angular/animations": "13.3.11",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "13.3.11",
+    "@angular/localize": "13.3.11",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
+    "@angular/service-worker": "13.3.11",
+    "@ng-bootstrap/ng-bootstrap": "12.1.2",
+    "@popperjs/core": "^2.10.2",
+    "autoprefixer": "10.4.5",
+    "aws-rum-web": "1.6.0",
+    "bootstrap": "^5.1.3",
+    "rxjs": "7.5.5",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.1",
-    "@angular/cli": "~11.2.1",
-    "@angular/compiler-cli": "~11.2.1",
+    "@angular-devkit/build-angular": "13.3.8",
+    "@angular/cli": "13.3.8",
+    "@angular/compiler-cli": "13.3.11",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "dotenv": "^16.0.1",
+    "@types/node": "18.0.0",
+    "dotenv": "16.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "10.8.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2",
+    "typescript": "4.4.3",
     "yargs": "^17.5.1"
   }
 }
