--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tomato-timer",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "scripts": {
     "ng": "ng",
     "config": "ts-node src/assets/scripts/setEnv.ts",
@@ -29,6 +29,7 @@
     "autoprefixer": "10.4.5",
     "aws-rum-web": "1.6.0",
     "bootstrap": "^5.1.3",
+    "ngx-google-analytics": "^13.0.1",
     "rxjs": "7.5.5",
     "tslib": "2.4.0",
     "zone.js": "0.11.6"
