--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
+              "src/robots.txt",
               "src/assets",
               "src/manifest.webmanifest"
             ],
