--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "10.4.5",
     "aws-rum-web": "1.6.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "ngx-google-analytics": "^13.0.1",
     "rxjs": "7.5.5",
     "tslib": "2.4.0",
