Add purgecss to remove unused css

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "config": "ts-node src/assets/scripts/setEnv.ts",
     "start": "npm run config -- --environment=dev && ng serve",
-    "build": "npm run config -- --environment=prod && ng build --prod",
+    "build": "npm run config -- --environment=prod && ng build --configuration production && npm run clean-css",
+    "clean-css": "cd dist/tomato-timer && purgecss --css ./styles.*.css --content ./index.html ./*.js --output ./ && cd ../..",
     "http-server": "http-server -p 8080 -c-1 dist/tomato-timer",
     "build-locale": "npm run build && npm run http-server",
     "test": "ng test",
@@ -50,6 +51,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "purgecss": "^4.1.3",
     "ts-node": "10.8.1",
     "tslint": "~6.1.0",
     "typescript": "4.4.3",
