--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "assets": [
               "src/favicon.ico",
               "src/robots.txt",
+              "src/sitemap.xml",
               "src/assets",
               "src/manifest.webmanifest"
             ],
