--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
+              "src/favicon-16x16.png",
+              "src/favicon-32x32.png",
               "src/robots.txt",
               "src/sitemap.xml",
               "src/assets",
